--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,8 @@
 
 #root {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .App {
@@ -39,4 +40,8 @@
 .post-exit-active {
     transform: translateX(-350px);
     transition: all 500ms ease-in;
+}
+
+.post__btns {
+    display: flex;
 }
