--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -21,7 +21,7 @@
     align-items: center;
     border: 2px solid #6ea1d2;
     padding: 10px;
-    margin: 20px 0;
+    margin-top: 20px;
 }
 
 .post-enter {
